# RA2YurisRevengeTrainer

./: .gitignore  .gitmodules  CMakeLists.txt  RATrainer.sln  README.md  exccpkgfile.py  pyproject.toml
CEScriptProcesser/: process.py
RATrainer/: DataTableDlg.cpp  DataTableDlg.h  RATrainer.aps  RATrainer.cpp  RATrainer.h  RATrainer.rc  RATrainer.vcxproj  RATrainer.vcxproj.filters  RATrainerDlg.cpp  RATrainerDlg.h  ReadMe.txt  resource.h  stdafx.cpp  trainerbase.cpp  trainerbase.h  trainerfunctions.cpp  trainerfunctions.h
RATrainer/Debug/: CL.read.1.tlog  CL.write.1.tlog  RATrainer.lastbuildstate  RATrainer.res  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc110.idb
RATrainer/res/: RATrainer.rc2
aa_engine v1.20 beta 13/: AA引擎说明.txt  烈火网下载说明.txt  烈火网下载频道.url
scripts/: generate_glyph_ranges.py  generate_web_main_page.py  ra2_trainer.toml  ra2_trainer_backend.toml  tech.txt
src/: ce_scripts.h  char_table.h  config.cpp  config.h  gui.cpp  gui.h  logging.cpp  logging.h  state.h  timer.cpp  timer.h  trainer.cpp  trainer_func.cpp  trainer_func.h  vendor.h  version.h  win32utils.cpp  win32utils.h
src/aa_engine/: CMakeLists.txt  aobscan.cpp  aobscan.h  asmserv.c  assembl.c  autoassembler.cpp  autoassembler.h  disasm.c  disasm.h  tools.cpp  tools.h
src/archive/frontend/desktop/: char_table.h  config.cc  config.h  glfw.h  gui.cc  gui_context.cc  timer.cc  timer.h
src/archive/protocol/: client.cc
src/backend/: config.cc  config.h  interface.cc  interface.h  record.cc  record.h  task_queue.cc  task_queue.h  tech.h
src/backend/game/: beacon.cc  beacon.h
src/backend/hook/: game_loop.cc  game_loop.h  hook.cc  hook.h  hook_point.h  logging.cc  logging.h  memory_api.cc  memory_api.h  mock_trainer.cc  mock_trainer.h  trainer.cc  trainer.h
src/backend/lib/: dllmain.cc
src/base/: crash_dump.cc  crash_dump.h  debug.cc  debug.h  logging.cc  logging.h  macro.h  task_queue.cc  thread.cc  thread.h  windows_shit.h  worker.h
src/common/: logging.cpp  logging.h  vendor.h  win32utils.h
src/formatter/: std.h
src/frontend/: char_table.h  config.cc  config.h  context.h  gui.cc  gui.h  gui_context.cc  gui_context.h  timer.cc  timer.h
src/frontend/desktop/: char_table.h  config.cc  config.h  context.h  encoding.h  glfw.h  gui.cc  gui.h  gui_context.h  test_window.cc
src/frontend/desktop/src/: main.js  styles.css
src/frontend/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/frontend/desktop/src-tauri/icons/: icon.icns
src/frontend/desktop/src-tauri/src/: lib.rs  main.rs
src/frontend/ra2_trainer/src/: index.html  main.js
src/frontend/ra2_trainer/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/ra2_trainer/src-tauri/capabilities/: default.json
src/frontend/ra2_trainer/src-tauri/src/: lib.rs
src/frontend/web/: client.js  index.html  localization.js  main.js  package-lock.json  package.json  protocol.js  script.js  styles.css  tauri_init.js  vite.config.ts
src/protocol/: client.cc  client.h  model.h  server.cc  server.h  test_json.cc
src/trainer/: char_table.h  gui.cpp  gui.h  logging.h  macro.h  main.cpp  vendor.h  win32utils.h
src/wsock32/: export_table.def  wsock32.cc  wsock32.h
